[package]
name = "rslab"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A slab allocator for Rust"
authors = ["chenlinfeng <chenlinfeng25@outlook.com>"]

repository = "https://github.com/os-module/rslab"
readme = "README.md"
keywords = ["slab", "allocator","os","no_std","no_alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
preprint = "0.1.0"
doubly-linked-list = "0.2.0"

spin = "0.9.2"
log = "0.4.14"
bitflags = "1.3.2"
[dev-dependencies]
lazy_static = "1.4.0"