[package]
name = "rslab"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A slab allocator for Rust"
authors = ["chenlinfeng <chenlinfeng25@outlook.com>"]

repository = "https://github.com/os-module/rslab"
readme = "README.md"
keywords = ["slab", "allocator","os","no_std","no_alloc"]
documentation = "https://docs.rs/rslab"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
preprint = "0.1.0"
doubly-linked-list = "0.2.0"

spin = "0.9.2"
log = "0.4.14"
bitflags = "1.3.2"




[dev-dependencies]
rand =  "0.8.5"
linked_list_allocator = { version = "0.10.3", features =  ["use_spin_nightly", "const_mut_refs", "alloc_ref"] }
simple-chunk-allocator = "0.1.5"
average = "0.13.1"
x86 = "0.51.0"
good_memory_allocator = {git = "https://github.com/MaderNoob/galloc",features = ["spin", "allocator"]}
buddy_system_allocator = "0.8.0"


[profile.release]
lto = true
codegen-units = 1